@@ -4,7 +4,8 @@ set (PACKAGE_LIBRARIES bson-1.0)
 
 include (CMakePackageConfigHelpers)
 
-foreach (prefix "1.0" "static-1.0")
+# These aren't pkg-config files, they're CMake package configuration files.
+function (install_package_config_file prefix)
    foreach (suffix "config.cmake" "config-version.cmake")
       configure_package_config_file (
          build/cmake/libbson-${prefix}-${suffix}.in
@@ -20,4 +21,10 @@ foreach (prefix "1.0" "static-1.0")
            lib/cmake/libbson-${prefix}
       )
    endforeach ()
-endforeach ()
+endfunction ()
+
+install_package_config_file ("1.0")
+
+if (ENABLE_STATIC)
+   install_package_config_file ("static-1.0")
+endif ()
